# git-auto-deploy

./: Cargo.toml
src/: config.rs
