[package]
name = "git-auto-deploy"
version = "0.1.0"
authors = ["zitudu <zitudu@protonmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cron = "0.8.0"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.8"